--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "precss": "^3.1.0",
-    "prettier": "^1.10.2"
+    "autoprefixer": "^8.0.0",
+    "precss": "^3.1.0"
   },
   "scripts": {
     "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
