--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "tailyons-test",
-  "description": "Tailyons Test",
+  "name": "gatsby-starter-tailyons",
+  "description": "Gatsby Starter Tailyons",
   "version": "1.0.0",
   "author": "Michael Uloth <hello@michaeluloth.com>",
-  "browserslist": [
-    "last 4 versions",
-    "> 1%",
-    "not ie < 11"
-  ],
+  "browserslist": ["last 4 versions", "> 1%", "not ie < 11"],
   "dependencies": {
     "d3-ease": "^1.0.3",
     "gatsby": "^1.9.158",
@@ -44,8 +40,10 @@
     "precss": "^3.1.0"
   },
   "scripts": {
-    "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
-    "build:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css",
+    "watch:postcss":
+      "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
+    "build:postcss":
+      "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css",
     "build:purgecss": "purgecss -c ./purgecss.config.js -o src/styles/builds/after-purgecss",
     "dev": "gatsby develop & npm run watch:postcss",
     "build": "npm run build:postcss && npm run build:purgecss && gatsby build"
