--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
   "name": "gatsby-starter-tailyons",
   "description": "Gatsby Starter Tailyons",
+  "repository": "gitlab:ooloth/gatsby-starter-tailyons.git",
   "version": "1.0.0",
   "author": "Michael Uloth <hello@michaeluloth.com>",
-  "browserslist": ["last 4 versions", "> 1%", "not ie < 11"],
+  "browserslist": [
+    "last 4 versions",
+    "> 1%",
+    "not ie < 11"
+  ],
   "dependencies": {
     "d3-ease": "^1.0.3",
-    "gatsby": "^1.9.158",
-    "gatsby-cli": "^1.1.40",
-    "gatsby-image": "^1.0.37",
-    "gatsby-link": "^1.6.34",
+    "gatsby": "^1.9.204",
+    "gatsby-cli": "^1.1.41",
+    "gatsby-image": "^1.0.38",
+    "gatsby-link": "^1.6.37",
     "gatsby-plugin-netlify": "^1.0.18",
     "gatsby-plugin-preact": "^1.0.16",
-    "gatsby-plugin-react-helmet": "^2.0.3",
+    "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-react-next": "^1.0.9",
-    "gatsby-plugin-sharp": "^1.6.30",
-    "gatsby-source-filesystem": "^1.5.20",
+    "gatsby-plugin-sharp": "^1.6.31",
+    "gatsby-source-filesystem": "^1.5.21",
     "gatsby-transformer-json": "^1.0.15",
-    "gatsby-transformer-sharp": "^1.6.19",
+    "gatsby-transformer-sharp": "^1.6.20",
     "isotope-layout": "^3.0.5",
     "object-fit-images": "^3.2.3",
-    "postcss-cli": "^5.0.0",
-    "purgecss": "^0.20.0",
     "react-aux": "^1.1.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
     "react-inlinesvg": "^0.7.5",
     "react-move": "^2.7.0",
-    "react-scroll": "^1.7.6",
+    "react-scroll": "^1.7.7",
     "react-slick": "^0.18.1",
     "react-waypoint": "^8.0.0",
     "scrollreveal": "^3.3.6",
@@ -37,13 +40,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
-    "precss": "^3.1.0"
+    "postcss-cli": "^5.0.0",
+    "precss": "^3.1.0",
+    "purgecss": "^0.20.0"
   },
   "scripts": {
-    "watch:postcss":
-      "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
-    "build:postcss":
-      "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css",
+    "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
+    "build:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css",
     "build:purgecss": "purgecss -c ./purgecss.config.js -o src/styles/builds/after-purgecss",
     "dev": "gatsby develop & npm run watch:postcss",
     "build": "npm run build:postcss && npm run build:purgecss && gatsby build"
