--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "not ie < 11"
   ],
   "dependencies": {
+    "animateplus": "^2.0.1",
     "d3-ease": "^1.0.3",
     "gatsby": "^1.9.204",
     "gatsby-cli": "^1.1.41",
