--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^1.5.21",
     "gatsby-transformer-json": "^1.0.15",
     "gatsby-transformer-sharp": "^1.6.20",
+    "intersection-observer": "^0.5.0",
     "isotope-layout": "^3.0.5",
     "object-fit-images": "^3.2.3",
     "react-aux": "^1.1.0",
