--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-transformer-sharp": "^1.6.20",
     "intersection-observer": "^0.5.0",
     "isotope-layout": "^3.0.5",
+    "loadjs": "^3.5.2",
     "object-fit-images": "^3.2.3",
     "react-aux": "^1.1.0",
     "react-helmet": "^5.2.0",
