--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "@researchgate/react-intersection-observer": "^0.6.0",
     "animateplus": "^2.0.1",
     "d3-ease": "^1.0.3",
-    "gatsby": "^1.9.217",
-    "gatsby-cli": "^1.1.44",
-    "gatsby-image": "^1.0.39",
-    "gatsby-link": "^1.6.37",
-    "gatsby-plugin-netlify": "^1.0.18",
-    "gatsby-plugin-preact": "^1.0.16",
-    "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-react-next": "^1.0.9",
-    "gatsby-plugin-sharp": "^1.6.35",
-    "gatsby-source-filesystem": "^1.5.24",
-    "gatsby-transformer-json": "^1.0.15",
-    "gatsby-transformer-sharp": "^1.6.21",
+    "gatsby": "^1.9.221",
+    "gatsby-cli": "^1.1.45",
+    "gatsby-image": "^1.0.40",
+    "gatsby-link": "^1.6.38",
+    "gatsby-plugin-netlify": "^1.0.19",
+    "gatsby-plugin-preact": "^1.0.17",
+    "gatsby-plugin-react-helmet": "^2.0.6",
+    "gatsby-plugin-react-next": "^1.0.10",
+    "gatsby-plugin-sharp": "^1.6.37",
+    "gatsby-plugin-sitemap": "^1.2.14",
+    "gatsby-source-filesystem": "^1.5.25",
+    "gatsby-transformer-json": "^1.0.16",
+    "gatsby-transformer-sharp": "^1.6.22",
     "intersection-observer": "^0.5.0",
     "isotope-layout": "^3.0.5",
     "loadjs": "^3.5.2",
@@ -40,7 +41,7 @@
     "scrollreveal": "^3.3.6",
     "shortid": "^2.2.8",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^0.4.1",
+    "tailwindcss": "^0.4.2",
     "what-input": "^5.0.5"
   },
   "devDependencies": {
@@ -48,7 +49,7 @@
     "gatsby-plugin-accessibilityjs": "^1.0.2",
     "gatsby-plugin-webpack-bundle-analyzer": "^0.1.1",
     "postcss-cli": "^5.0.0",
-    "precss": "^3.1.1",
+    "precss": "^3.1.2",
     "purgecss": "^0.20.0"
   },
   "scripts": {
