--- a/package.json
+++ b/package.json
@@ -13,44 +13,51 @@
     "@researchgate/react-intersection-observer": "^0.6.0",
     "animateplus": "^2.0.1",
     "d3-ease": "^1.0.3",
-    "gatsby": "^1.9.221",
-    "gatsby-cli": "^1.1.45",
-    "gatsby-image": "^1.0.40",
-    "gatsby-link": "^1.6.38",
+    "gatsby": "^1.9.239",
+    "gatsby-cli": "^1.1.47",
+    "gatsby-image": "^1.0.42",
+    "gatsby-link": "^1.6.39",
+    "gatsby-plugin-favicon": "^2.1.1",
+    "gatsby-plugin-manifest": "^1.0.15",
     "gatsby-plugin-netlify": "^1.0.19",
+    "gatsby-plugin-offline": "^1.0.15",
     "gatsby-plugin-preact": "^1.0.17",
-    "gatsby-plugin-react-helmet": "^2.0.6",
-    "gatsby-plugin-react-next": "^1.0.10",
-    "gatsby-plugin-sharp": "^1.6.37",
-    "gatsby-plugin-sitemap": "^1.2.14",
-    "gatsby-source-filesystem": "^1.5.25",
+    "gatsby-plugin-react-helmet": "^2.0.8",
+    "gatsby-plugin-react-next": "^1.0.11",
+    "gatsby-plugin-sharp": "^1.6.41",
+    "gatsby-plugin-sitemap": "^1.2.19",
+    "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-json": "^1.0.16",
     "gatsby-transformer-sharp": "^1.6.22",
     "intersection-observer": "^0.5.0",
     "isotope-layout": "^3.0.5",
-    "loadjs": "^3.5.2",
+    "jsonp": "^0.2.1",
+    "loadjs": "^3.5.3",
     "object-fit-images": "^3.2.3",
     "react-aux": "^1.1.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
-    "react-inlinesvg": "^0.7.5",
+    "react-inlinesvg": "^0.8.0",
     "react-move": "^2.7.0",
     "react-scroll": "^1.7.7",
-    "react-slick": "^0.19.0",
-    "react-waypoint": "^8.0.0",
-    "scrollreveal": "^3.3.6",
+    "react-slick": "^0.21.0",
+    "react-waypoint": "^8.0.1",
+    "scrollreveal": "^3.4.0",
     "shortid": "^2.2.8",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^0.4.2",
+    "tailwindcss": "^0.5.1",
     "what-input": "^5.0.5"
   },
   "devDependencies": {
-    "autoprefixer": "^8.0.0",
-    "gatsby-plugin-accessibilityjs": "^1.0.2",
+    "autoprefixer": "^8.2.0",
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.19.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "gatsby-plugin-webpack-bundle-analyzer": "^0.1.1",
     "postcss-cli": "^5.0.0",
     "precss": "^3.1.2",
-    "purgecss": "^0.20.0"
+    "purgecss": "^0.21.0"
   },
   "scripts": {
     "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
