--- a/package.json
+++ b/package.json
@@ -29,11 +29,15 @@
     "intersection-observer": "^0.5.0",
     "jsonp": "^0.2.1",
     "loadjs": "^3.5.3",
+    "no-scroll": "^2.1.0",
     "object-fit-images": "^3.2.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
+    "react-image-lightbox": "^4.6.0",
     "react-inlinesvg": "^0.8.0",
+    "react-modal": "^3.3.2",
     "react-slick": "^0.21.0",
+    "react-stickynode": "^1.4.1",
     "react-waypoint": "^8.0.1",
     "shortid": "^2.2.8",
     "slick-carousel": "^1.8.1",
@@ -44,12 +48,17 @@
     "autoprefixer": "^8.2.0",
     "babel-eslint": "^8.2.2",
     "eslint": "^4.19.1",
+    "eslint-plugin-compat": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "gatsby-plugin-webpack-bundle-analyzer": "^0.1.1",
     "postcss-cli": "^5.0.0",
     "precss": "^3.1.2",
-    "purgecss": "^0.21.0"
+    "purgecss": "^0.21.0",
+    "stylelint": "^9.1.3",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-no-unsupported-browser-features": "^2.0.0"
   },
   "scripts": {
     "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
