--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
   "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:jsx-a11y/recommended"],
   "globals": {
     "graphql": false,
-    "process": false
+    "process": false,
+    "TimelineMax": false,
+    "TweenMax": false
   },
   "parser": "babel-eslint",
   "parserOptions": {
