--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "react-media": "^1.8.0",
     "react-modal": "^3.3.2",
     "react-player": "^1.5.0",
+    "react-rellax": "^1.0.2",
     "react-shapes": "^0.1.0",
     "react-slick": "^0.21.0",
     "react-stickynode": "^1.4.1",
     "react-textarea-autosize": "^6.1.0",
+    "react-transition-group": "^2.3.1",
     "react-waypoint": "^8.0.1",
     "shortid": "^2.2.8",
     "slick-carousel": "^1.8.1",
