--- a/package.json
+++ b/package.json
@@ -10,51 +10,52 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "gatsby": "^1.9.239",
-    "gatsby-cli": "^1.1.47",
-    "gatsby-image": "^1.0.42",
-    "gatsby-link": "^1.6.39",
+    "gatsby": "^1.9.259",
+    "gatsby-cli": "^1.1.51",
+    "gatsby-image": "^1.0.51",
+    "gatsby-link": "^1.6.44",
     "gatsby-plugin-favicon": "^2.1.1",
-    "gatsby-plugin-manifest": "^1.0.15",
+    "gatsby-plugin-manifest": "^1.0.21",
     "gatsby-plugin-netlify": "^1.0.19",
-    "gatsby-plugin-offline": "^1.0.15",
-    "gatsby-plugin-react-helmet": "^2.0.8",
+    "gatsby-plugin-offline": "^1.0.16",
+    "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sharp": "^1.6.41",
-    "gatsby-plugin-sitemap": "^1.2.19",
-    "gatsby-source-filesystem": "^1.5.27",
-    "gatsby-transformer-json": "^1.0.16",
-    "gatsby-transformer-sharp": "^1.6.22",
+    "gatsby-plugin-sharp": "^1.6.44",
+    "gatsby-plugin-sitemap": "^1.2.23",
+    "gatsby-source-filesystem": "^1.5.35",
+    "gatsby-transformer-json": "^1.0.17",
+    "gatsby-transformer-sharp": "^1.6.24",
     "intersection-observer": "^0.5.0",
     "jsonp": "^0.2.1",
     "lightbox-react": "^0.1.5",
-    "loadjs": "^3.5.3",
-    "no-scroll": "^2.1.0",
+    "loadjs": "^3.5.4",
+    "no-scroll": "^2.1.1",
     "object-fit-images": "^3.2.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
-    "react-image-lightbox": "^4.6.0",
-    "react-inlinesvg": "^0.8.0",
+    "react-image-lightbox": "^5.0.0",
+    "react-inlinesvg": "^0.8.1",
     "react-instafeed": "^0.4.0",
     "react-media": "^1.8.0",
-    "react-modal": "^3.3.2",
+    "react-modal": "^3.4.4",
     "react-player": "^1.5.0",
     "react-rellax": "^1.0.2",
     "react-shapes": "^0.1.0",
-    "react-slick": "^0.21.0",
+    "react-slick": "^0.23.1",
+    "react-spring": "^5.1.2",
     "react-stickynode": "^1.4.1",
     "react-textarea-autosize": "^6.1.0",
     "react-transition-group": "^2.3.1",
     "react-waypoint": "^8.0.1",
     "shortid": "^2.2.8",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^0.5.1",
+    "tailwindcss": "^0.5.3",
     "twitter-fetcher": "^18.0.2",
-    "what-input": "^5.0.5"
+    "what-input": "^5.0.7"
   },
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
-    "babel-eslint": "^8.2.2",
+    "autoprefixer": "^8.4.1",
+    "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-plugin-compat": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -63,10 +64,10 @@
     "postcss-cli": "^5.0.0",
     "precss": "^3.1.2",
     "purgecss": "^0.21.0",
-    "stylelint": "^9.1.3",
+    "stylelint": "^9.2.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-no-unsupported-browser-features": "^2.0.0"
+    "stylelint-no-unsupported-browser-features": "^3.0.0"
   },
   "scripts": {
     "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
