--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^1.5.35",
     "gatsby-transformer-json": "^1.0.17",
     "gatsby-transformer-sharp": "^1.6.24",
+    "gatsby-transformer-yaml": "^1.5.17",
     "intersection-observer": "^0.5.0",
     "jsonp": "^0.2.1",
     "lightbox-react": "^0.1.5",
