Fixed logical errors in GSAPExample and improved it by converting it to a state chart approach

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "loadjs": "^3.5.4",
     "no-scroll": "^2.1.1",
     "object-fit-images": "^3.2.3",
+    "react-automata": "^3.0.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
     "react-image-lightbox": "^5.0.0",
