--- a/src/data/example.yaml
+++ b/src/data/example.yaml
@@ -1,7 +1,7 @@
 - image: ../img/placeholder.jpg
   alt: I'm an alt tag!
   title: I'm Title 1
-  description: I'm an inline <a href=\https://www.google.ca\>Link</a>
+  description: I'm an inline <a href="https://www.google.ca" target="_blank" rel="noopener nofollow" class="link-inline">Link</a>
   link: https://www.google.ca
 
 - image: ../img/placeholder.jpg
