Add a Quote component with the correct markup for blockquotes and their citations

--- a/src/data/example.yaml
+++ b/src/data/example.yaml
@@ -6,7 +6,7 @@
 
 - image: ../img/placeholder.jpg
   alt: I'm an alt tag!
-  title: I'm Title 2 and I'm muuuuuuuuuuuuuuuuuuch longer than Title 1
+  title: I'm Title 2 and I'm much, much, much, much, much, much, much, much, much longer than Title 1
   description: I'm a description...
   link: https://www.google.ca
 
