--- a/package.json
+++ b/package.json
@@ -10,29 +10,28 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "gatsby": "^1.9.261",
-    "gatsby-cli": "^1.1.52",
-    "gatsby-image": "^1.0.51",
-    "gatsby-link": "^1.6.44",
+    "gatsby": "next",
+    "gatsby-cli": "next",
+    "gatsby-image": "next",
     "gatsby-plugin-favicon": "^2.1.1",
-    "gatsby-plugin-manifest": "^1.0.22",
-    "gatsby-plugin-netlify": "^1.0.19",
-    "gatsby-plugin-offline": "^1.0.16",
-    "gatsby-plugin-react-helmet": "^2.0.11",
-    "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sharp": "^1.6.44",
-    "gatsby-plugin-sitemap": "^1.2.23",
-    "gatsby-source-filesystem": "^1.5.36",
-    "gatsby-transformer-json": "^1.0.18",
-    "gatsby-transformer-sharp": "^1.6.24",
-    "gatsby-transformer-yaml": "^1.5.17",
+    "gatsby-plugin-manifest": "next",
+    "gatsby-plugin-netlify": "next",
+    "gatsby-plugin-offline": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sharp": "next",
+    "gatsby-plugin-sitemap": "next",
+    "gatsby-source-filesystem": "next",
+    "gatsby-transformer-sharp": "next",
+    "gatsby-transformer-yaml": "next",
     "intersection-observer": "^0.5.0",
     "jsonp": "^0.2.1",
     "lightbox-react": "^0.1.5",
     "loadjs": "^3.5.4",
     "no-scroll": "^2.1.1",
     "object-fit-images": "^3.2.3",
+    "react": "^16.4.1",
     "react-automata": "^3.0.0",
+    "react-dom": "^16.4.1",
     "react-flickity-component": "^3.0.2",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
@@ -40,13 +39,13 @@
     "react-inlinesvg": "^0.8.1",
     "react-instafeed": "^0.4.0",
     "react-media": "^1.8.0",
-    "react-modal": "^3.4.4",
-    "react-player": "^1.6.1",
+    "react-modal": "^3.4.5",
+    "react-player": "^1.6.2",
     "react-rellax": "^1.0.2",
     "react-shapes": "^0.1.0",
     "react-slick": "^0.23.1",
-    "react-spring": "^5.1.10",
-    "react-stickynode": "^1.4.1",
+    "react-spring": "^5.3.8",
+    "react-stickynode": "^2.0.1",
     "react-textarea-autosize": "^6.1.0",
     "react-transition-group": "^2.3.1",
     "react-waypoint": "^8.0.1",
@@ -57,12 +56,13 @@
     "what-input": "^5.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^8.5.0",
+    "autoprefixer": "^8.6.0",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
-    "eslint-plugin-compat": "^2.2.0",
+    "eslint-plugin-compat": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react": "^7.9.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "gatsby-plugin-webpack-bundle-analyzer": "^0.1.1",
     "postcss-cli": "^5.0.0",
     "precss": "^3.1.2",
