--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-netlify": "next",
+    "gatsby-plugin-netlify-cache": "^0.1.0",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-robots-txt": "^1.0.2",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-sitemap": "next",
     "gatsby-source-filesystem": "next",
@@ -33,6 +35,7 @@
     "react-automata": "^3.0.0",
     "react-dom": "^16.4.1",
     "react-flickity-component": "^3.0.2",
+    "react-headroom": "^2.2.2",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
     "react-image-lightbox": "^5.0.0",
@@ -76,7 +79,7 @@
     "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
     "build:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css",
     "build:purgecss": "purgecss -c ./purgecss.config.js -o src/styles/builds/after-purgecss",
-    "dev": "gatsby develop & npm run watch:postcss",
+    "dev": "gatsby develop --https & npm run watch:postcss",
     "build": "npm run build:postcss && npm run build:purgecss && gatsby build"
   }
 }
