Update Starter based on Dan's site

--- a/src/data/lightboxVideos.yaml
+++ b/src/data/lightboxVideos.yaml
@@ -1,9 +1,9 @@
 - url: https://www.youtube.com/watch?v=ZTLAx3VDX7g&t=11s,
-  image: ../img/placeholder.jpg
+  image: ../img/placeholder-1.jpg
 
 - url: https://www.youtube.com/watch?v=ZTLAx3VDX7g&t=11s,
-  image: ../img/placeholder.jpg
+  image: ../img/placeholder-2.jpg
 
 - url: https://www.youtube.com/watch?v=ZTLAx3VDX7g&t=11s,
-  image: ../img/placeholder.jpg
+  image: ../img/placeholder-3.jpg
   
