--- a/src/data/example.yaml
+++ b/src/data/example.yaml
@@ -1,16 +1,16 @@
-- image: ../img/placeholder.jpg
+- image: ../img/placeholder-1.jpg
   alt: I'm an alt tag!
   title: I'm Title 1
   description: I'm an inline <a href="https://www.google.ca" target="_blank" rel="noopener nofollow" class="link-inline">Link</a>
   link: https://www.google.ca
 
-- image: ../img/placeholder.jpg
+- image: ../img/placeholder-2.jpg
   alt: I'm an alt tag!
   title: I'm Title 2
   description: I'm a description...
   link: https://www.google.ca
 
-- image: ../img/placeholder.jpg
+- image: ../img/placeholder-3.jpg
   alt: I'm an alt tag!
   title: I'm Title 3
   description: I'm also a description...
