--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.10.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "gatsby-plugin-postcss": "^1.0.0",
     "gatsby-plugin-webpack-bundle-analyzer": "^0.1.1",
     "precss": "^3.1.2",
     "purgecss-webpack-plugin": "^1.2.0",
@@ -73,9 +74,7 @@
     "subfont": "^3.4.0"
   },
   "scripts": {
-    "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
-    "build:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css",
-    "dev": "gatsby develop --https & npm run watch:postcss",
-    "build": "npm run build:postcss && gatsby build"
+    "dev": "gatsby develop --https",
+    "build": "gatsby build && subfont public -i --inline-css"
   }
 }
