--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,10 @@
     "__dirname": false,
     "graphql": false,
     "process": false,
-    "TimelineMax": false,
-    "TweenMax": false
+    "TimelineLite": false,
+    "TimelineLite": false,
+    "TweenLite": false,
+    "TweenLite": false
   },
   "parser": "babel-eslint",
   "parserOptions": {
