--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-robots-txt": "^1.0.2",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-sitemap": "next",
+    "gatsby-plugin-svgr": "^1.0.1",
     "gatsby-source-filesystem": "next",
     "gatsby-transformer-sharp": "next",
     "gatsby-transformer-yaml": "next",
