Update eslint setup

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gatsby-plugin-netlify-cache": "^0.1.0",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-robots-txt": "^1.0.2",
+    "gatsby-plugin-robots-txt": "^1.2.0",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-sitemap": "next",
     "gatsby-plugin-svgr": "^1.0.1",
@@ -48,8 +48,8 @@
     "react-slick": "^0.23.1",
     "react-stickynode": "^2.0.1",
     "react-textarea-autosize": "^7.0.4",
-    "react-transition-group": "^2.3.1",
-    "react-waypoint": "^8.0.1",
+    "react-transition-group": "^2.4.0",
+    "react-waypoint": "^8.0.3",
     "shortid": "^2.2.8",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^0.6.1",
@@ -60,16 +60,18 @@
     "autoprefixer": "^9.0.1",
     "babel-eslint": "^8.2.3",
     "eslint": "^5.2.0",
-    "eslint-plugin-compat": "^2.5.1",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.10.0",
     "gatsby-plugin-postcss": "^1.0.0",
     "precss": "^3.1.2",
     "purgecss-webpack-plugin": "^1.2.0",
-    "stylelint": "^9.2.1",
+    "stylelint": "^9.4.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-no-unsupported-browser-features": "^3.0.1",
-    "subfont": "^3.4.0",
+    "subfont": "^3.6.0",
     "why-did-you-update": "^0.1.1"
   },
   "scripts": {
