--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gatsby-plugin-robots-txt": "^1.2.0",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-sitemap": "next",
-    "gatsby-plugin-svgr": "^1.0.1",
+    "gatsby-plugin-svgr": "next",
     "gatsby-source-filesystem": "next",
     "gatsby-transformer-sharp": "next",
     "gatsby-transformer-yaml": "next",
@@ -57,15 +57,17 @@
     "what-input": "^5.1.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-constant-elements": "^7.0.0-rc.1",
     "autoprefixer": "^9.0.1",
     "babel-eslint": "^8.2.3",
+    "dotenv": "^6.0.0",
     "eslint": "^5.2.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.10.0",
-    "gatsby-plugin-postcss": "^1.0.0",
+    "gatsby-plugin-postcss": "next",
     "precss": "^3.1.2",
     "purgecss-webpack-plugin": "^1.2.0",
     "stylelint": "^9.4.0",
