--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.10.0",
-    "gatsby-plugin-postcss": "^2.0.0-beta.3",
+    "gatsby-plugin-postcss": "next",
     "precss": "^3.1.2",
     "purgecss-webpack-plugin": "^1.2.0",
     "stylelint": "^9.4.0",
