--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "autoprefixer": "^9.0.1",
     "@babel/plugin-transform-react-constant-elements": "^7.0.0-rc.1",
+    "autoprefixer": "^9.1.3",
     "gatsby": "next",
     "gatsby-cli": "next",
     "gatsby-image": "next",
@@ -21,7 +21,7 @@
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-postcss": "next",
     "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-robots-txt": "^1.2.0",
+    "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-sitemap": "next",
     "gatsby-plugin-svgr": "next",
@@ -33,16 +33,15 @@
     "lightbox-react": "^0.1.5",
     "loadjs": "^3.5.4",
     "no-scroll": "^2.1.1",
-    "object-fit-images": "^3.2.3",
+    "object-fit-images": "^3.2.4",
     "precss": "^3.1.2",
-    "purgecss-webpack-plugin": "^1.2.0",
-    "react": "^16.4.1",
-    "react-automata": "^3.0.0",
-    "react-dom": "^16.4.1",
+    "purgecss-webpack-plugin": "^1.2.1",
+    "react": "^16.4.2",
+    "react-automata": "^4.0.2",
+    "react-dom": "^16.4.2",
     "react-flickity-component": "^3.0.2",
     "react-headroom": "^2.2.2",
     "react-helmet": "^5.2.0",
-    "react-icons": "^2.2.7",
     "react-image-lightbox": "^5.0.0",
     "react-instafeed": "^0.4.0",
     "react-media": "^1.8.0",
@@ -51,26 +50,27 @@
     "react-shapes": "^0.1.0",
     "react-slick": "^0.23.1",
     "react-stickynode": "^2.0.1",
+    "react-test-renderer": "^16.4.2",
     "react-textarea-autosize": "^7.0.4",
     "react-transition-group": "^2.4.0",
     "react-waypoint": "^8.0.3",
-    "shortid": "^2.2.8",
+    "shortid": "^2.2.13",
     "slick-carousel": "^1.8.1",
-    "subfont": "^3.6.0",
-    "tailwindcss": "^0.6.1",
+    "subfont": "^3.6.1",
+    "tailwindcss": "^0.6.5",
     "twitter-fetcher": "^18.0.2",
     "what-input": "^5.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "dotenv": "^6.0.0",
-    "eslint": "^5.2.0",
+    "eslint": "^5.4.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.10.0",
-    "stylelint": "^9.4.0",
+    "eslint-plugin-react": "^7.11.1",
+    "stylelint": "^9.5.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-no-unsupported-browser-features": "^3.0.1",
     "why-did-you-update": "^0.1.1"
