--- a/src/data/lightboxVideos.yml
+++ b/src/data/lightboxVideos.yml
@@ -1,9 +1,9 @@
 - url: https://www.youtube.com/watch?v=ZTLAx3VDX7g&t=11s,
-  image: ../img/placeholder-1.jpg
+  image: ../images/placeholder-1.jpg
 
 - url: https://www.youtube.com/watch?v=ZTLAx3VDX7g&t=11s,
-  image: ../img/placeholder-2.jpg
+  image: ../images/placeholder-2.jpg
 
 - url: https://www.youtube.com/watch?v=ZTLAx3VDX7g&t=11s,
-  image: ../img/placeholder-3.jpg
+  image: ../images/placeholder-3.jpg
   
