--- a/src/data/mediaPortrait.yml
+++ b/src/data/mediaPortrait.yml
@@ -1,34 +1,34 @@
-- image: ../img/placeholder-1.jpg
+- image: ../images/placeholder-1.jpg
   alt: Visual description of image contents
   objPosition: 50% 50%
   caption: 'Photo by Photographer #1'
   category: portrait
 
-- image: ../img/placeholder-2.jpg
+- image: ../images/placeholder-2.jpg
   alt: Visual description of image contents
   objPosition: 50% 50%
   caption: 'Photo by Photographer #2'
   category: portrait
 
-- image: ../img/placeholder-3.jpg
+- image: ../images/placeholder-3.jpg
   alt: Visual description of image contents
   objPosition: 50% 50%
   caption: 'Photo by Photographer #3'
   category: portrait
 
-- image: ../img/placeholder-4.jpg
+- image: ../images/placeholder-4.jpg
   alt: Visual description of image contents
   objPosition: 50% 50%
   caption: 'Photo by Photographer #4'
   category: portrait
 
-- image: ../img/placeholder-5.jpg
+- image: ../images/placeholder-5.jpg
   alt: Visual description of image contents
   objPosition: 50% 50%
   caption: 'Photo by Photographer #5'
   category: portrait
 
-- image: ../img/placeholder-6.jpg
+- image: ../images/placeholder-6.jpg
   alt: Visual description of image contents
   objPosition: 50% 50%
   caption: 'Photo by Photographer #6'
