Experimented with react-pose and react-spring but sticking with GSAP for performance reasons (react-pose was buggy in Safari and I couldn't get react-spring to do what I wanted easily). Also removed react-automata from the Reveal component and made it less buggy using async-await

--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "react-media": "^1.8.0",
     "react-modal": "^3.4.5",
     "react-player": "^1.6.2",
+    "react-pose": "^3.1.0",
     "react-shapes": "^0.1.0",
     "react-slick": "^0.23.1",
+    "react-spring": "^5.6.10",
     "react-stickynode": "^2.0.1",
     "react-test-renderer": "^16.4.2",
     "react-textarea-autosize": "^7.0.4",
@@ -57,6 +59,7 @@
     "react-waypoint": "^8.0.3",
     "shortid": "^2.2.13",
     "slick-carousel": "^1.8.1",
+    "stylefire": "^2.0.6",
     "subfont": "^3.6.1",
     "tailwindcss": "^0.6.5",
     "twitter-fetcher": "^18.0.2",
