--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
     "@babel/plugin-transform-react-constant-elements": "^7.0.0-rc.1",
     "autoprefixer": "^9.1.3",
     "formik": "^1.3.1",
-    "gatsby": "next",
-    "gatsby-cli": "next",
-    "gatsby-image": "next",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-netlify": "next",
+    "gatsby": "^2.0.0-rc.28",
+    "gatsby-cli": "^2.0.0-rc.6",
+    "gatsby-image": "^2.0.0-rc.4",
+    "gatsby-plugin-manifest": "^2.0.2-rc.1",
+    "gatsby-plugin-netlify": "^2.0.0-rc.6",
     "gatsby-plugin-netlify-cache": "^0.1.0",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-postcss": "next",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-offline": "^2.0.0-rc.9",
+    "gatsby-plugin-postcss": "^2.0.0-rc.5",
+    "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
     "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-sitemap": "next",
+    "gatsby-plugin-sharp": "^2.0.0-rc.7",
+    "gatsby-plugin-sitemap": "^2.0.0-rc.2",
     "gatsby-plugin-subfont": "^1.0.1",
-    "gatsby-plugin-svgr": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-transformer-sharp": "next",
-    "gatsby-transformer-yaml": "next",
+    "gatsby-plugin-svgr": "^2.0.0-alpha",
+    "gatsby-source-filesystem": "^2.0.1-rc.6",
+    "gatsby-transformer-sharp": "^2.1.1-rc.3",
+    "gatsby-transformer-yaml": "^2.1.1-rc.6",
     "intersection-observer": "^0.5.0",
     "is_js": "^0.9.0",
     "jsonp": "^0.2.1",
