--- a/package.json
+++ b/package.json
@@ -13,70 +13,70 @@
     "@babel/plugin-transform-react-constant-elements": "^7.0.0-rc.1",
     "autoprefixer": "^9.1.3",
     "formik": "^1.3.1",
-    "gatsby": "^2.0.0-rc.28",
-    "gatsby-cli": "^2.0.0-rc.6",
-    "gatsby-image": "^2.0.0-rc.4",
-    "gatsby-plugin-manifest": "^2.0.2-rc.1",
-    "gatsby-plugin-netlify": "^2.0.0-rc.6",
-    "gatsby-plugin-netlify-cache": "^0.1.0",
-    "gatsby-plugin-offline": "^2.0.0-rc.9",
+    "gatsby": "^2.0.21",
+    "gatsby-cli": "^2.4.3",
+    "gatsby-image": "^2.0.13",
+    "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-netlify": "^2.0.1",
+    "gatsby-plugin-netlify-cache": "^1.0.0",
+    "gatsby-plugin-offline": "^2.0.6",
     "gatsby-plugin-postcss": "^2.0.0-rc.5",
     "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
     "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "^2.0.0-rc.7",
-    "gatsby-plugin-sitemap": "^2.0.0-rc.2",
+    "gatsby-plugin-sharp": "^2.0.6",
+    "gatsby-plugin-sitemap": "^2.0.1",
     "gatsby-plugin-subfont": "^1.0.1",
     "gatsby-plugin-svgr": "^2.0.0-alpha",
-    "gatsby-source-filesystem": "^2.0.1-rc.6",
-    "gatsby-transformer-sharp": "^2.1.1-rc.3",
-    "gatsby-transformer-yaml": "^2.1.1-rc.6",
+    "gatsby-source-filesystem": "^2.0.3",
+    "gatsby-transformer-sharp": "^2.1.3",
+    "gatsby-transformer-yaml": "^2.1.3",
     "intersection-observer": "^0.5.0",
     "is_js": "^0.9.0",
     "jsonp": "^0.2.1",
-    "lightbox-react": "^0.1.5",
+    "lightbox-react": "^0.3.6",
     "loadjs": "^3.5.4",
     "no-scroll": "^2.1.1",
     "object-fit-images": "^3.2.4",
     "precss": "^3.1.2",
     "purgecss-webpack-plugin": "^1.2.1",
-    "react": "^16.4.2",
-    "react-automata": "^4.0.2",
-    "react-dom": "^16.4.2",
-    "react-flickity-component": "^3.0.2",
-    "react-headroom": "^2.2.2",
+    "react": "^16.5.2",
+    "react-automata": "^4.0.4",
+    "react-dom": "^16.5.2",
+    "react-flickity-component": "^3.1.0",
+    "react-headroom": "^2.2.4",
     "react-helmet": "^5.2.0",
     "react-image-lightbox": "^5.0.0",
     "react-instafeed": "^0.4.0",
-    "react-intersection-observer": "^6.1.1",
+    "react-intersection-observer": "^6.2.3",
     "react-media": "^1.8.0",
-    "react-modal": "^3.4.5",
-    "react-player": "^1.6.2",
-    "react-pose": "^3.1.0",
+    "react-modal": "^3.6.1",
+    "react-player": "^1.6.6",
+    "react-pose": "^3.3.6",
     "react-shapes": "^0.1.0",
     "react-slick": "^0.23.1",
-    "react-spring": "^5.6.10",
+    "react-spring": "^5.9.2",
     "react-stickynode": "^2.0.1",
-    "react-test-renderer": "^16.4.2",
+    "react-test-renderer": "^16.5.2",
     "react-textarea-autosize": "^7.0.4",
-    "react-transition-group": "^2.4.0",
+    "react-transition-group": "^2.5.0",
     "react-waypoint": "^8.0.3",
     "shortid": "^2.2.13",
     "slick-carousel": "^1.8.1",
-    "stylefire": "^2.0.6",
-    "subfont": "^3.6.1",
-    "tailwindcss": "^0.6.5",
+    "stylefire": "^2.1.0",
+    "subfont": "^3.6.2",
+    "tailwindcss": "^0.6.6",
     "twitter-fetcher": "^18.0.2",
-    "what-input": "^5.1.1",
+    "what-input": "^5.1.2",
     "yup": "^0.26.6"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "dotenv": "^6.0.0",
-    "eslint": "^5.4.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.50.0",
+    "babel-eslint": "^10.0.1",
+    "dotenv": "^6.1.0",
+    "eslint": "^5.6.1",
+    "eslint-config-react-app": "^3.0.3",
+    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "why-did-you-update": "^0.1.1"
   },
