--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
   ],
   "dependencies": {
     "@babel/plugin-transform-react-constant-elements": "^7.0.0-rc.1",
-    "autoprefixer": "^9.1.3",
+    "autoprefixer": "^9.3.1",
     "formik": "^1.3.1",
-    "gatsby": "^2.0.21",
-    "gatsby-cli": "^2.4.3",
-    "gatsby-image": "^2.0.13",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-netlify": "^2.0.1",
+    "gatsby": "^2.0.33",
+    "gatsby-cli": "^2.4.4",
+    "gatsby-image": "^2.0.18",
+    "gatsby-plugin-manifest": "^2.0.7",
+    "gatsby-plugin-netlify": "^2.0.3",
     "gatsby-plugin-netlify-cache": "^1.0.0",
-    "gatsby-plugin-offline": "^2.0.6",
-    "gatsby-plugin-postcss": "^2.0.0-rc.5",
-    "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
+    "gatsby-plugin-offline": "^2.0.10",
+    "gatsby-plugin-postcss": "^2.0.1",
+    "gatsby-plugin-react-helmet": "^3.0.1",
     "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "^2.0.6",
-    "gatsby-plugin-sitemap": "^2.0.1",
-    "gatsby-plugin-subfont": "^1.0.1",
+    "gatsby-plugin-sharp": "^2.0.10",
+    "gatsby-plugin-sitemap": "^2.0.2",
+    "gatsby-plugin-subfont": "^1.0.2",
     "gatsby-plugin-svgr": "^2.0.0-alpha",
-    "gatsby-source-filesystem": "^2.0.3",
-    "gatsby-transformer-sharp": "^2.1.3",
-    "gatsby-transformer-yaml": "^2.1.3",
-    "intersection-observer": "^0.5.0",
+    "gatsby-source-filesystem": "^2.0.6",
+    "gatsby-transformer-sharp": "^2.1.7",
+    "gatsby-transformer-yaml": "^2.1.4",
+    "intersection-observer": "^0.5.1",
     "is_js": "^0.9.0",
     "jsonp": "^0.2.1",
     "lightbox-react": "^0.3.6",
@@ -38,10 +38,10 @@
     "no-scroll": "^2.1.1",
     "object-fit-images": "^3.2.4",
     "precss": "^3.1.2",
-    "purgecss-webpack-plugin": "^1.2.1",
-    "react": "^16.5.2",
+    "purgecss-webpack-plugin": "^1.3.1",
+    "react": "^16.7.0-alpha.0",
     "react-automata": "^4.0.4",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.7.0-alpha.0",
     "react-flickity-component": "^3.1.0",
     "react-headroom": "^2.2.4",
     "react-helmet": "^5.2.0",
@@ -51,12 +51,12 @@
     "react-media": "^1.8.0",
     "react-modal": "^3.6.1",
     "react-player": "^1.6.6",
-    "react-pose": "^3.3.6",
+    "react-pose": "^3.3.7",
     "react-shapes": "^0.1.0",
-    "react-slick": "^0.23.1",
-    "react-spring": "^5.9.2",
+    "react-slick": "^0.23.2",
+    "react-spring": "^6.1.4",
     "react-stickynode": "^2.0.1",
-    "react-test-renderer": "^16.5.2",
+    "react-test-renderer": "^16.6.0",
     "react-textarea-autosize": "^7.0.4",
     "react-transition-group": "^2.5.0",
     "react-waypoint": "^8.0.3",
@@ -72,9 +72,9 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "dotenv": "^6.1.0",
-    "eslint": "^5.6.1",
-    "eslint-config-react-app": "^3.0.3",
-    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint": "^5.8.0",
+    "eslint-config-react-app": "^3.0.4",
+    "eslint-plugin-flowtype": "^3.1.4",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
