--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/plugin-transform-react-constant-elements": "^7.0.0-rc.1",
     "autoprefixer": "^9.3.1",
+    "babel-plugin-styled-components": "^1.8.0",
     "formik": "^1.3.1",
     "gatsby": "^2.0.33",
     "gatsby-cli": "^2.4.4",
@@ -25,6 +26,7 @@
     "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sharp": "^2.0.10",
     "gatsby-plugin-sitemap": "^2.0.2",
+    "gatsby-plugin-styled-components": "^3.0.1",
     "gatsby-plugin-subfont": "^1.0.2",
     "gatsby-plugin-svgr": "^2.0.0-alpha",
     "gatsby-source-filesystem": "^2.0.6",
@@ -62,8 +64,11 @@
     "react-waypoint": "^8.0.3",
     "shortid": "^2.2.13",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^4.0.2",
+    "styled-system": "^3.1.11",
     "stylefire": "^2.1.0",
     "subfont": "^3.6.2",
+    "system-components": "^3.0.1",
     "tailwindcss": "^0.6.6",
     "twitter-fetcher": "^18.0.2",
     "what-input": "^5.1.2",
@@ -77,8 +82,7 @@
     "eslint-plugin-flowtype": "^3.1.4",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "why-did-you-update": "^0.1.1"
+    "eslint-plugin-react": "^7.11.1"
   },
   "scripts": {
     "dev": "gatsby develop --https",
