--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
   ],
   "dependencies": {
     "@babel/plugin-transform-react-constant-elements": "^7.0.0-rc.1",
+    "@svgr/webpack": "^4.1.0",
     "autoprefixer": "^9.3.1",
-    "babel-plugin-styled-components": "^1.8.0",
     "formik": "^1.3.2",
-    "gatsby": "^2.0.50",
+    "gatsby": "^2.0.55",
     "gatsby-cli": "^2.4.5",
     "gatsby-image": "^2.0.20",
-    "gatsby-plugin-manifest": "^2.0.9",
+    "gatsby-plugin-manifest": "^2.0.10",
     "gatsby-plugin-netlify": "^2.0.5",
     "gatsby-plugin-netlify-cache": "^1.0.0",
-    "gatsby-plugin-offline": "^2.0.15",
+    "gatsby-plugin-offline": "^2.0.17",
     "gatsby-plugin-postcss": "^2.0.1",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "^2.0.12",
+    "gatsby-plugin-sharp": "^2.0.13",
     "gatsby-plugin-sitemap": "^2.0.2",
-    "gatsby-plugin-styled-components": "^3.0.2",
     "gatsby-plugin-subfont": "^1.0.2",
-    "gatsby-plugin-svgr": "^2.0.0-alpha",
-    "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-plugin-svgr": "^2.0.1",
+    "gatsby-source-filesystem": "^2.0.9",
     "gatsby-transformer-sharp": "^2.1.8",
     "gatsby-transformer-yaml": "^2.1.5",
     "intersection-observer": "^0.5.1",
@@ -39,8 +38,8 @@
     "loadjs": "^3.5.4",
     "no-scroll": "^2.1.1",
     "object-fit-images": "^3.2.4",
-    "precss": "^3.1.2",
-    "purgecss-webpack-plugin": "^1.3.1",
+    "precss": "^4.0.0",
+    "purgecss-webpack-plugin": "^1.4.0",
     "react": "^16.7.0-alpha.0",
     "react-automata": "^4.0.4",
     "react-dom": "^16.7.0-alpha.0",
@@ -56,19 +55,16 @@
     "react-pose": "^4.0.2",
     "react-shapes": "^0.1.0",
     "react-slick": "^0.23.2",
-    "react-spring": "^6.1.8",
+    "react-spring": "^6.1.9",
     "react-stickynode": "^2.1.0",
     "react-test-renderer": "^16.6.3",
     "react-textarea-autosize": "^7.0.4",
     "react-transition-group": "^2.5.0",
-    "react-waypoint": "^8.0.3",
+    "react-waypoint": "^8.1.0",
     "shortid": "^2.2.14",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^4.1.1",
-    "styled-system": "^3.1.11",
     "stylefire": "^2.3.1",
     "subfont": "^3.6.2",
-    "system-components": "^3.0.2",
     "tailwindcss": "^0.7.2",
     "twitter-fetcher": "^18.0.2",
     "what-input": "^5.1.3",
