--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@babel/plugin-transform-react-constant-elements": "^7.0.0-rc.1",
+    "@babel/plugin-transform-react-constant-elements": "^7.2.0",
     "@svgr/webpack": "^4.1.0",
-    "autoprefixer": "^9.3.1",
+    "autoprefixer": "^9.4.2",
     "formik": "^1.3.2",
-    "gatsby": "^2.0.55",
-    "gatsby-cli": "^2.4.5",
-    "gatsby-image": "^2.0.20",
-    "gatsby-plugin-manifest": "^2.0.10",
-    "gatsby-plugin-netlify": "^2.0.5",
+    "gatsby": "^2.0.62",
+    "gatsby-cli": "^2.4.6",
+    "gatsby-image": "^2.0.22",
+    "gatsby-plugin-manifest": "^2.0.11",
+    "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cache": "^1.0.0",
-    "gatsby-plugin-offline": "^2.0.17",
-    "gatsby-plugin-postcss": "^2.0.1",
-    "gatsby-plugin-react-helmet": "^3.0.2",
+    "gatsby-plugin-offline": "^2.0.18",
+    "gatsby-plugin-postcss": "^2.0.2",
+    "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "^2.0.13",
-    "gatsby-plugin-sitemap": "^2.0.2",
-    "gatsby-plugin-subfont": "^1.0.2",
+    "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-plugin-sitemap": "^2.0.3",
+    "gatsby-plugin-subfont": "^1.0.3",
     "gatsby-plugin-svgr": "^2.0.1",
-    "gatsby-source-filesystem": "^2.0.9",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "gatsby-transformer-yaml": "^2.1.5",
+    "gatsby-source-filesystem": "^2.0.10",
+    "gatsby-transformer-sharp": "^2.1.9",
+    "gatsby-transformer-yaml": "^2.1.6",
     "intersection-observer": "^0.5.1",
     "is_js": "^0.9.0",
     "jsonp": "^0.2.1",
@@ -48,22 +48,22 @@
     "react-helmet": "^5.2.0",
     "react-image-lightbox": "^5.0.0",
     "react-instafeed": "^0.4.0",
-    "react-intersection-observer": "^6.2.3",
+    "react-intersection-observer": "^6.3.1",
     "react-media": "^1.8.0",
     "react-modal": "^3.6.1",
     "react-player": "^1.7.0",
-    "react-pose": "^4.0.2",
+    "react-pose": "^4.0.3",
     "react-shapes": "^0.1.0",
     "react-slick": "^0.23.2",
-    "react-spring": "^6.1.9",
+    "react-spring": "^6.1.10",
     "react-stickynode": "^2.1.0",
     "react-test-renderer": "^16.6.3",
-    "react-textarea-autosize": "^7.0.4",
+    "react-textarea-autosize": "^7.1.0",
     "react-transition-group": "^2.5.0",
     "react-waypoint": "^8.1.0",
     "shortid": "^2.2.14",
     "slick-carousel": "^1.8.1",
-    "stylefire": "^2.3.1",
+    "stylefire": "^2.3.2",
     "subfont": "^3.6.2",
     "tailwindcss": "^0.7.2",
     "twitter-fetcher": "^18.0.2",
