--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/plugin-transform-react-constant-elements": "^7.2.0",
     "@svgr/webpack": "^4.1.0",
     "autoprefixer": "^9.4.2",
+    "babel-plugin-styled-components": "^1.10.0",
     "formik": "^1.3.2",
     "gatsby": "^2.0.62",
     "gatsby-cli": "^2.4.6",
@@ -26,6 +27,7 @@
     "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-sitemap": "^2.0.3",
+    "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-subfont": "^1.0.3",
     "gatsby-plugin-svgr": "^2.0.1",
     "gatsby-source-filesystem": "^2.0.10",
@@ -41,6 +43,7 @@
     "precss": "^4.0.0",
     "purgecss-webpack-plugin": "^1.4.0",
     "react": "^16.7.0-alpha.0",
+    "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-automata": "^4.0.4",
     "react-dom": "^16.7.0-alpha.0",
     "react-flickity-component": "^3.1.0",
@@ -49,6 +52,7 @@
     "react-image-lightbox": "^5.0.0",
     "react-instafeed": "^0.4.0",
     "react-intersection-observer": "^6.3.1",
+    "react-measure": "^2.1.3",
     "react-media": "^1.8.0",
     "react-modal": "^3.6.1",
     "react-player": "^1.7.0",
@@ -63,6 +67,7 @@
     "react-waypoint": "^8.1.0",
     "shortid": "^2.2.14",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^4.1.3",
     "stylefire": "^2.3.2",
     "subfont": "^3.6.2",
     "tailwindcss": "^0.7.2",
