--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "shortid": "^2.2.14",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3",
+    "styled-system": "^3.2.0",
     "stylefire": "^2.3.2",
     "subfont": "^3.6.2",
     "tailwindcss": "^0.7.2",
