--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,6 +9,10 @@ globals:
   TweenLite: false
   TweenMax: false
 
+plugins:
+- react-hooks
+
 rules:
   import/first: 0
   no-use-before-define: 0
+  react-hooks/rules-of-hooks: error
