📦add some postcss plugins to see if it works with SC

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-netlify": "^2.0.13",
     "gatsby-plugin-netlify-cache": "^1.1.0",
     "gatsby-plugin-offline": "^2.0.25",
+    "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sharp": "^2.0.30",
@@ -41,6 +42,7 @@
     "lightbox-react": "^0.3.7",
     "loadjs": "^3.6.0",
     "object-fit-images": "^3.2.4",
+    "precss": "^4.0.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-headroom": "^2.2.8",
